fixed horizontal scroll bar

--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -38,7 +38,8 @@ body{
   border-width: 0em 0em 2em 2em;
   border-color: transparent;
   border-style: solid;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .documentDisplay img {
@@ -80,7 +81,8 @@ body{
 
 .listOfReports{
   width: 30%;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
   height: 85.5%;
   list-style: none;
   float: left;
